package lab.en2b.quizapi.game;

public enum GameMode {
    KIWI_QUEST,
    FOOTBALL_SHOWDOWN,
    GEO_GENIUS,
    VIDEOGAME_ADVENTURE,
    ANCIENT_ODYSSEY,
    RANDOM,
    CUSTOM
}

