package lab.en2b.quizapi.questions.question;

public enum QuestionCategory {
    //HISTORY, GEOGRAPHY, SCIENCE, MATH, LITERATURE, ART, SPORTS, MUSIC, MOVIES, TV, POLITICS, OTHER
    GEOGRAPHY, SPORTS, //MUSIC,
    ART, VIDEOGAMES
}
