package lab.en2b.quizapi.questions.question;

public enum QuestionType {
    TEXT, VIDEO, IMAGE, AUDIO

}
